PLA-19 add tag and transaction APIs (#12)
